<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<include layout="@layout/toolbar"
    android:id="@+id/toolbar"
    app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:rotation="-30"
        android:scaleType="fitXY"
        android:src="@drawable/oaulogoxml"
        android:tint="@color/tintcolor"
        android:tintMode="src_atop"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp"
        />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:background="@drawable/direction_bg"

      android:layout_marginLeft="50dp"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:orientation="vertical"
      >
      <ImageView
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:src="@drawable/oaulogo"
          android:layout_marginStart="50dp"
          android:layout_marginLeft="50dp"
          android:layout_marginTop="20dp"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/location"
          android:textSize="20sp"
          android:textColor="@color/textcolor"
          android:layout_marginLeft="80dp"
          android:layout_marginStart="80dp"
          app:fontFamily="@font/twcennstdultraboldit"

          />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginEnd="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginStart="50dp"
          android:background="@drawable/button_bg"
          android:layout_marginTop="20dp"
          android:text="@string/lec_threatre"
          android:id="@+id/l_threatre"
          android:textSize="20sp"
          app:fontFamily="@font/twcennstdultraboldit"/>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginEnd="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginStart="50dp"
          android:background="@drawable/button_bg"
          android:layout_marginTop="20dp"
          android:text="@string/pop_area"
          android:id="@+id/popular_area"
          android:textSize="20sp"
          app:fontFamily="@font/twcennstdultraboldit"/>
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginEnd="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginStart="50dp"
          android:background="@drawable/button_bg"
          android:layout_marginTop="20dp"
          android:text="@string/fac"
          android:id="@+id/fac"
          android:textSize="20sp"
          app:fontFamily="@font/twcennstdultraboldit"
          android:layout_marginBottom="50dp"/>

  </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"/>
</android.support.constraint.ConstraintLayout>